Update MONGO_URI in environment configuration

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://nesandaniel_db_user:leosclub@cluster0.huoflym.mongodb.net/
+MONGO_URI=connectionStringMentionedInTheGuide
 JWT_SECRET=supersecretjwtkey
 
